--- a/.github/workflows/build-theme-zip.yml
+++ b/.github/workflows/build-theme-zip.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v*.*.*"
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -47,5 +50,3 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: dist/*.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
