--- a/.github/workflows/build-theme-zip.yml
+++ b/.github/workflows/build-theme-zip.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: "20"
       - name: Install React deps
         working-directory: "wp-content/themes/lauras-mercantile-hybrid-enhanced 3/react-src"
-        run: npm ci
+        run: npm install --no-audit --no-fund
 
       - name: Build React
         working-directory: "wp-content/themes/lauras-mercantile-hybrid-enhanced 3/react-src"
