fix: specify Port 2222 and absolute path for WP Engine staging deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,8 @@ jobs:
           SOURCE: "wp-content/themes/lauras-mercantile-theme-gpt-dev/"
           REMOTE_HOST: ${{ secrets.WPE_STAGING_HOST }}
           REMOTE_USER: ${{ secrets.WPE_STAGING_USER }}
-          TARGET: "wp-content/themes/lauras-mercantile-theme-gpt-dev/"
+          REMOTE_PORT: 2222
+          TARGET: "/sites/merc22stg/wp-content/themes/lauras-mercantile-theme-gpt-dev/"
           EXCLUDE: "/node_modules/, /react-src/, .git/"
           SSH_CMD_ARGS: "-o StrictHostKeyChecking=no"
 
