--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,17 @@ jobs:
           rm -rf ../assets/dist/
           npm run build
 
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.WPE_STAGING_SSH_KEY }}
+          known_hosts: "placeholder" # We skip checking below
+          if_key_exists: fail
+
       - name: Connectivity Check
         run: |
-          echo "Testing connection to ${{ secrets.WPE_STAGING_HOST }} on port 2222..."
-          nc -zv -w 5 ${{ secrets.WPE_STAGING_HOST }} 2222 || echo "Port 2222 unreachable on host"
-          nc -zv -w 5 ${{ secrets.WPE_STAGING_HOST }} 22 || echo "Port 22 unreachable on host"
+          echo "Testing connection to ${{ secrets.WPE_STAGING_HOST }} on port 22..."
+          nc -zv -w 5 ${{ secrets.WPE_STAGING_HOST }} 22 || echo "Port 22 unreachable"
 
       - name: Deploy to Staging via SSH
         uses: easingthemes/ssh-deploy@main
@@ -50,12 +56,8 @@ jobs:
           EXCLUDE: "/node_modules/, /react-src/, .git/"
           SSH_CMD_ARGS: "-o StrictHostKeyChecking=no"
 
-      - name: Remote Discovery & Cache Flush
+      - name: Post-Deploy Commands (Cache Flush)
         run: |
-          echo "Server Environment Check:"
-          ssh -p 22 -o StrictHostKeyChecking=no ${{ secrets.WPE_STAGING_USER }}@${{ secrets.WPE_STAGING_HOST }} "pwd; ls -la; ls -la /sites/ || echo 'No /sites/ dir'; ls -la /sites/merc22stg/ || echo 'No /sites/merc22stg/ dir'"
-          echo "Listing assets on server..."
-          ssh -p 22 -o StrictHostKeyChecking=no ${{ secrets.WPE_STAGING_USER }}@${{ secrets.WPE_STAGING_HOST }} "ls -la /sites/merc22stg/wp-content/themes/lauras-mercantile-theme-gpt-dev/assets/dist/ || echo 'Assets not found at full path'"
           echo "Flushing WP Engine Cache..."
           ssh -p 22 -o StrictHostKeyChecking=no ${{ secrets.WPE_STAGING_USER }}@${{ secrets.WPE_STAGING_HOST }} "wp cache flush || true"
 
